# replop

./: LICENSE  README.md  TODO
CL_code/: HOWTO  README  README.md  TODO  install.command
CL_code/code/: 2  HOWTO  Makefile  README.md  data.txt  eva.txt  eva2.txt  eve.txt  gmon.out  tmp.geno  tmp.lfmm  tmp.txt
CL_code/code/docs/: doxygen.cfg
CL_code/code/src/: .LFMM.c.swp  .sNMF.c.swp  LFMM.c  README.md  createDataSet.c  crossEntropy.c  sNMF.c
CL_code/code/test/: README  README.md  check.R  create_test.sh  generator.R  meta.sh  test.res  test_global.sh  test_run.sh  test_stat.sh
CL_code/examples/LFMM/: README
CL_code/release/: HOWTO  README.md  TODO
CL_code/release/LEA/: HOWTO  TODO  create_LEA_release.sh
CL_code/release/LFMM/: .create_LFMM_release.sh.swp  README  create_LFMM_release.sh
CL_code/release/Replop/: DESCRIPTION  NAMESPACE  create_Replop_release.sh
CL_code/release/Replop/src/nnlsm/tests/: CMakeLists.txt  test_K10N10_rand.txt
CL_code/release/sNMF/: README  create_sNMF_release.sh
Eric.Frichot/: README.md  TODO  conf.html  index.html  lea.html  lfmm.html  publi.html  snmf.html  soft.html  teaching.html
Eric.Frichot/LEA/: contact.htm  faq.htm  index.htm  news.htm  software.htm  tutorial.htm
Eric.Frichot/index_files/: logo_timc.html  style.css  style.html
Eric.Frichot/lfmm/: contact.htm  faq.htm  head.inc  index.htm  news.htm  software.htm  tutorial.htm
Eric.Frichot/snmf/: contact.htm  faq.htm  index.htm  news.htm  software.htm  tutorial.htm
GUI_code/: HOWTO  README.md  TODO
GUI_code/LFMM_GUI_tocompile/: install.command
(+1619 files in other folders)
